# SECloud

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: config.rs  encryption.rs  error.rs  hash.rs  lib.rs  password.rs  user.rs
core/src/: encryption.rs  error.rs  hash.rs  user.rs
server/: Cargo.toml  README.md  commands.sh
server/migrations/: 20260112063112_users.down.sql  20260112063112_users.up.sql
server/src/: config.rs  db.rs  dtos.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs
server/src/handler/: auth.rs  users.rs
server/src/utils/: file.rs  token.rs
