[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
# jsonwebtoken = "10.2.0"
jsonwebtoken = "9.2.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
tracing-subscriber = "0.3.22"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
async-trait = "0.1.89"
# async-trait = "0.1.72"
time = "0.3.44"
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9.2"
